crates/aura-macros/tests/trybuild/invalid_guard_capability.stderr
error: Invalid annotation value: guard_capability expects a string literal
 --> tests/trybuild/invalid_guard_capability.rs:3:1
  |
3 | / choreography!(r#"
4 | | module invalid_guard_capability exposing (InvalidGuardCapability)
5 | |
6 | | protocol InvalidGuardCapability =
7 | |   roles Alice, Bob
8 | |   Alice[guard_capability = 42] -> Bob : Message
9 | | "#);
  | |___^
  |
  = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
